--- a/index.html
+++ b/index.html
@@ -8,19 +8,26 @@
 <h2 style="text-align:center"> </h2>
 
 <div class="card">
-  <img src="icons/me.png" id=shoot alt="Hack" style="width: 20%; align-self: center;">
+  <img src="icons/me.png"  alt="Hack" style="width: 40%; align-self: center;">
   <name style="text-align:center; font-size:35px;">HackTheAir</name>
   <name style="text-align:center; font-size:15px;">:D</name>
   <name style="text-align:center; font-size:15px;">Hi HackTheAir here i mainly code and somtimes draw</name>
-
   <img src="Emojis/meow.png" alt="nsfw" style="width:15%; align-self: center;">
   <div style="margin: 24px 0;">
-    <a href="https://github.com/Hackx2"><img src="icons/github.svg" alt="meow" style="width:20%; align-self: auto;" class="center">Github</i> </a> 
-    <a href="https://twitter.com/AnimatesHack"><img src="icons/twitter.svg" alt="meow" style="width:20%;">Twitter</i> </a> 
-    <buttondiscord onclick='copy()'><img src="icons/discord.svg" alt="meow" style="width:10%; text-align:center;" class="center">Discord</i> </buttondiscord>  
+    <a href="https://github.com/Hackx2"><img src="icons/github.svg" alt="meow" style="width:27%; align-self: auto;" value="Github" class="center">Github</i> </a> 
+    <a href="https://twitter.com/AnimatesHack"><img src="icons/twitter.svg" alt="meow" style="width:27%;" value="Twitter">Twitter</i> </a> 
+    <a href="https://twitter.com/AnimatesHack"><img src="icons/gamebanana.png" alt="meow" style="width:27%; text-align:center;font-size: 1px; " value="Gamebanana">GB</i> </a>  
+    <buttondiscord class="button discord" onclick='copy()'>
+      <div class=center>
+        <object style="text-align:center;" data="icons/discord.svg"></object>
+        <span style="text-align:center" class=center; id=nickname>Discord</span>
+      </div>
+    </buttondiscord>
+  </div>
+
+
   </div>
 </div>
-
 <h2 style="text-align:center">Made by me :D</h2>
 
 </body>
