--- a/index.html
+++ b/index.html
@@ -5,30 +5,56 @@
 <link rel="stylesheet" href="main.css"> 
 </head>
 <body>
-<h2 style="text-align:center"> </h2>
 
-<div class="card">
-  <img src="icons/me.png"  alt="Hack" style="width: 40%; align-self: center;">
-  <name style="text-align:center; font-size:35px;">HackTheAir</name>
-  <name style="text-align:center; font-size:15px;">:D</name>
-  <name style="text-align:center; font-size:15px;">Hi HackTheAir here i mainly code and somtimes draw</name>
-  <img src="Emojis/meow.png" alt="nsfw" style="width:15%; align-self: center;">
-  <div style="margin: 24px 0;">
-    <a href="https://github.com/Hackx2"><img src="icons/github.svg" alt="meow" style="width:27%; align-self: auto;" value="Github" class="center">Github</i> </a> 
-    <a href="https://twitter.com/AnimatesHack"><img src="icons/twitter.svg" alt="meow" style="width:27%;" value="Twitter">Twitter</i> </a>  
-    <buttondiscord class="button discord" onclick='copy()'>
-      <div class=center>
-        <object style="text-align:center;" data="icons/discord.svg"></object>
-        <span style="text-align:center" class=center; id=nickname>Discord</span>
+<div class=body> 
+  <div class="card">
+    <div class=profile>
+      <img id=dpfp style=display:none><br>
+      <span class=nickname>HackTheAir</span>
+    </div>
+  
+    <div class="bio"> no<br>
+      Hi HackTheAir here i mainly code and somtimes draw<br>
+      ngl no one uses pronouns<br>
+      Minecraft, FNF, Roblox, gib robux<br>
+      :D<br>
+      <img src="Emojis/meow.png" alt="nsfw" style="width:15%; align-self: center;">
+    </div>
+  
+    <div class=buttons>
+      
+      <div class="button github" onclick='href("https://github.com/Hackx2")'>
+        <div class=center>
+          <object data="icons/github.svg"; style="width:30%;"></object>
+          <span>GitHub</span>
+        </div>
       </div>
-    </buttondiscord>
+      <div class="button twitter" onclick='href("https://twitter.com/AnimatesHack")'>
+        <div class=center>
+          <object data="icons/twitter.svg"></object>
+          <span>Twitter</span>
+        </div>
+      </div>
+    </div>
+    <div class="button gamebanana" onclick='href("https://github.com/Hackx2")'>
+      <div class=center>
+        <object data="icons/gamebanana.png"; style="width:0%;"></object>
+        <span>Gamebanana</span>
+      </div>
+    </div>
   </div>
-
-
-  </div>
+  <div class="button discord" onclick='copy()'>
+    <div class=center>
+      <object data="icons/discord.svg"></object>
+      <span id=nickname>Loading...</span>
+      </div>
+    </div>
+  </div> 
+    <span class="footer">Among us💚</span>
+    </div>
+  </body>
 </div>
-<h2 style="text-align:center">Made by me :D</h2>
 
-</body>
 <script src="main.js"></script>
+
 </html>
