--- a/index.html
+++ b/index.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
+
+
 <html>
 <head>
 <title>HackTheAir</title>
 <link rel="stylesheet" href="main.css"> 
 </head>
 <body>
-
 <div class=body> 
   <div class="card">
     <div class=profile>
-      <img id=dpfp style=display:none><br>
+      <br> <br>
       <span class=nickname>HackTheAir</span>
     </div>
   
-    <div class="bio"> no<br>
+    <div class="bio"> no <br>
       Hi HackTheAir here i mainly code and somtimes draw<br>
       ngl no one uses pronouns<br>
       Minecraft, FNF, Roblox, gib robux<br>
       :D<br>
-      <img src="Emojis/meow.png" alt="nsfw" style="width:15%; align-self: center;">
+      <img src="Emojis/meow.png" alt="nsfw" style="width:15%; align-self: center;"><br>
+      <br>
     </div>
-  
+
     <div class=buttons>
-      
       <div class="button github" onclick='href("https://github.com/Hackx2")'>
         <div class=center>
           <object data="icons/github.svg"; style="width:30%;"></object>
@@ -36,22 +37,15 @@
         </div>
       </div>
     </div>
-    <div class="button gamebanana" onclick='href("https://github.com/Hackx2")'>
-      <div class=center>
-        <object data="icons/gamebanana.png"; style="width:0%;"></object>
-        <span>Gamebanana</span>
+  <div class="button discord" onclick='meow()'>
+    <div class=center>
+      <object data="icons/discord.svg"></object>
+      <span id=nickname>N/A</span>
       </div>
     </div>
   </div>
-  <div class="button discord" onclick='copy()'>
-    <div class=center>
-      <object data="icons/discord.svg"></object>
-      <span id=nickname>Loading...</span>
-      </div>
-    </div>
-  </div> 
-    <span class="footer">Among us💚</span>
-    </div>
+  <span class="footer">Among us</span>
+  </div>
   </body>
 </div>
 
