--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="card">
     <div class=profile>
       <br> <br>
-      <span class=nickname>HackTheAir</span>
+      <span class=nickname>HackTheAir</span><br>
     </div>
   
     <div class="bio"> no <br>
@@ -19,21 +19,21 @@
       ngl no one uses pronouns<br>
       Minecraft, FNF, Roblox, gib robux<br>
       :D<br>
-      <img src="Emojis/meow.png" alt="nsfw" style="width:15%; align-self: center;"><br>
+      <img src="Emojis/tr.png" alt="nsfw" style="width:15%; align-self: center;"><br>
       <br>
     </div>
 
     <div class=buttons>
-      <div class="button github" onclick='href("https://github.com/Hackx2")'>
-        <div class=center>
-          <object data="icons/github.svg"; style="width:30%;"></object>
-          <span>GitHub</span>
-        </div>
-      </div>
       <div class="button twitter" onclick='href("https://twitter.com/AnimatesHack")'>
         <div class=center>
           <object data="icons/twitter.svg"></object>
           <span>Twitter</span>
+        </div>
+      </div>
+    <div class="button github" onclick='href("https://github.com/Hackx2")'>
+        <div class=center>
+          <object data="icons/github.svg"; style="width:30%;"></object>
+          <span>GitHub</span>
         </div>
       </div>
     </div>
