--- a/links/Links.html
+++ b/links/Links.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-
-
 <html>
 <head>
-    <title>HackTheAir - Links</title>
+<title>HackTheAir - Links</title>
+<!-- Main.css makes it all look good -->
 <link rel="stylesheet" href="../src/main.css"> 
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -19,22 +19,21 @@
          <li><a href="../index.html">Card</a></li>
       </ul>
   </nav>
-  <a class="cta" href="#">Contact</a>
+  <a class="cta" href="../index.html">Contact</a>
   <p class="menu cta">Menu</p>
 </header>
 <div id="mobile__menu" class="overlay">
   <a class="close">&times;</a>
   <div class="overlay__content">
-    <li><a href="../links/Links.html">Links</a></li>
+    <li><a href="../links/Links.html">Links</a></li> ../links/Links.html
      <li><a href="../index.html">Card</a></li>
   </div>
 </div>
 
-<!-- Top Bar -->
+<!-- Buttons -->
 
- 
     <div class=buttons>
-        <div class="button Sunset Engine" onclick='href("https://twitter.com/AnimatesHack")'>
+        <div class="button SunsetEngine" onclick='href("./SunsetEngine.html")'>
           <div class=center>
             <object data="../src/github.svg"></object>
             <span>Sunset Engine</span>
@@ -47,9 +46,11 @@
           </div>
         </div>
       </div>
+<!-- End -->
+
   </body>
 </div>
-
+<!-- Main.js lol -->
 <script src="../src/main.js" ></script>
 
 </html>
